--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -90,23 +90,28 @@ jobs:
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
 
-          # All fixtures for the season
+          # Append events for the selected team
           jq -r --arg team_id "$TEAM_ID" '
             .response[]
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
             | . as $fx
             | ($fx.fixture.date | split("+")[0] | gsub("[-:]";"")) as $dtstart
-            | ($fx.fixture.timestamp + 7200 | strftime("%Y%m%dT%H%M%SZ")) as $dtend  # add 2 hours
+            | ($fx.fixture.date | split("+")[0] | gsub("[-:]";"") | .[0:8] + "T" + (. | .[8:12] + "00Z")) as $dtend
             | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ")) +
               "\nDTSTART:" + $dtstart +
               "\nDTEND:" + $dtend +
-              "\nSUMMARY:" +
-                "\($fx.teams.home.name) v \($fx.teams.away.name)" +
-                (if $fx.fixture.status.short=="FT" then " \($fx.goals.home)-\($fx.goals.away)" else "" end) +
-              "\nDESCRIPTION:" + (
-                "Referee: " + ($fx.fixture.referee // "TBD") +
-                " | Round: " + ($fx.league.round // "Unknown")
+              "\nSUMMARY:" + (
+                if $fx.teams.home.id == ($team_id|tonumber) then
+                  "\($fx.teams.home.name)" +
+                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.home) v \($fx.goals.away) " else " v " end) +
+                  "\($fx.teams.away.name)"
+                else
+                  "\($fx.teams.away.name)" +
+                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.away) v \($fx.goals.home) " else " v " end) +
+                  "\($fx.teams.home.name)"
+                end
               ) +
+              "\nDESCRIPTION:" + ("Referee: " + ($fx.fixture.referee // "TBD")) +
               "\nLOCATION:" + ($fx.fixture.venue.name // "Unknown") +
               "\nEND:VEVENT"
           ' tmp/fixtures.json >> $ICS_FILE
