--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -18,12 +18,14 @@ jobs:
       - name: Set up jq
         run: sudo apt-get install -y jq
 
-      - name: Fetch fixtures
+      - name: Fetch full season fixtures
         run: |
           TEAM_ID=$(cat ./assets/teamid.txt)
           mkdir -p tmp
+          SEASON=$(date +%Y)
+          echo "📅 Fetching full season fixtures for team $TEAM_ID, season $SEASON"
           curl -s --request GET \
-            --url "https://v3.football.api-sports.io/fixtures?season=$(date +%Y)&team=$TEAM_ID" \
+            --url "https://v3.football.api-sports.io/fixtures?season=$SEASON&team=$TEAM_ID" \
             --header "x-apisports-key: ${{ secrets.FOOTBALL_API_KEY }}" \
             -o tmp/fixtures.json
 
@@ -41,25 +43,31 @@ jobs:
             .response[]
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
             | . as $fx
+            # Normalize date to UTC Z format
             | ($fx.fixture.date | sub("\\+00:00$";"Z")) as $dtstart
+            # Format start and end times
             | ($dtstart | gsub("[-:]";"") | .[0:15]) as $dtstart_fmt
             | ($dtstart | fromdate + 7200 | strftime("%Y%m%dT%H%M%SZ")) as $dtend_fmt
+            # Build event summary
+            | (
+                if $fx.teams.home.id == ($team_id|tonumber) then
+                  $home = $fx.teams.home.name
+                  $away = $fx.teams.away.name
+                  $home_score = $fx.goals.home
+                  $away_score = $fx.goals.away
+                else
+                  $home = $fx.teams.away.name
+                  $away = $fx.teams.home.name
+                  $home_score = $fx.goals.away
+                  $away_score = $fx.goals.home
+                end
+              )
+            | $summary = ($home + (if $fx.fixture.status.short=="FT" then " \($home_score) v \($away_score)" else "" end) + " v " + $away + (if $fx.league.type != "League" then " (\($fx.league.name))" else "" end))
             | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ")) +
               "\nDTSTART:" + $dtstart_fmt +
               "\nDTEND:" + $dtend_fmt +
-              "\nSUMMARY:" + (
-                if $fx.teams.home.id == ($team_id|tonumber) then
-                  "\($fx.teams.home.name)" +
-                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.home) v \($fx.goals.away) " else " v " end) +
-                  "\($fx.teams.away.name)"
-                else
-                  "\($fx.teams.away.name)" +
-                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.away) v \($fx.goals.home) " else " v " end) +
-                  "\($fx.teams.home.name)"
-                end
-              ) +
-              (if ($fx.league.type != "League") then " (\($fx.league.name))" else "" end) +
-              "\nDESCRIPTION:" + ("Referee: " + ($fx.fixture.referee // "TBD")) +
+              "\nSUMMARY:" + $summary +
+              "\nDESCRIPTION:Referee: " + ($fx.fixture.referee // "TBD") +
               "\nLOCATION:" + ($fx.fixture.venue.name // "Unknown") +
               "\nEND:VEVENT"
           ' tmp/fixtures.json >> $ICS_FILE
