--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -18,14 +18,14 @@ jobs:
       - name: Set up jq
         run: sudo apt-get install -y jq
 
-      - name: Fetch full season fixtures
+      - name: Fetch all season fixtures
         run: |
           TEAM_ID=$(cat ./assets/teamid.txt)
           mkdir -p tmp
-          SEASON=$(date +%Y)
-          echo "📅 Fetching full season fixtures for team $TEAM_ID, season $SEASON"
+
+          echo "📅 Fetching full season fixtures..."
           curl -s --request GET \
-            --url "https://v3.football.api-sports.io/fixtures?season=$SEASON&team=$TEAM_ID" \
+            --url "https://v3.football.api-sports.io/fixtures?season=$(date +%Y)&team=$TEAM_ID" \
             --header "x-apisports-key: ${{ secrets.FOOTBALL_API_KEY }}" \
             -o tmp/fixtures.json
 
@@ -43,30 +43,26 @@ jobs:
             .response[]
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
             | . as $fx
-            # Normalize date to UTC Z format
             | ($fx.fixture.date | sub("\\+00:00$";"Z")) as $dtstart
-            # Format start and end times
             | ($dtstart | gsub("[-:]";"") | .[0:15]) as $dtstart_fmt
             | ($dtstart | fromdate + 7200 | strftime("%Y%m%dT%H%M%SZ")) as $dtend_fmt
-            # Build event summary
-            | (
-                if $fx.teams.home.id == ($team_id|tonumber) then
-                  $home = $fx.teams.home.name
-                  $away = $fx.teams.away.name
-                  $home_score = $fx.goals.home
-                  $away_score = $fx.goals.away
-                else
-                  $home = $fx.teams.away.name
-                  $away = $fx.teams.home.name
-                  $home_score = $fx.goals.away
-                  $away_score = $fx.goals.home
-                end
-              )
-            | $summary = ($home + (if $fx.fixture.status.short=="FT" then " \($home_score) v \($away_score)" else "" end) + " v " + $away + (if $fx.league.type != "League" then " (\($fx.league.name))" else "" end))
             | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ")) +
               "\nDTSTART:" + $dtstart_fmt +
               "\nDTEND:" + $dtend_fmt +
-              "\nSUMMARY:" + $summary +
+              "\nSUMMARY:" +
+                (
+                  if $fx.teams.home.id == ($team_id|tonumber) then
+                    $fx.teams.home.name +
+                    (if $fx.fixture.status.short=="FT" then " \($fx.goals.home) v \($fx.goals.away)" else "" end) +
+                    " v " + $fx.teams.away.name +
+                    (if $fx.league.type != "League" then " (\($fx.league.name))" else "" end)
+                  else
+                    $fx.teams.away.name +
+                    (if $fx.fixture.status.short=="FT" then " \($fx.goals.away) v \($fx.goals.home)" else "" end) +
+                    " v " + $fx.teams.home.name +
+                    (if $fx.league.type != "League" then " (\($fx.league.name))" else "" end)
+                  end
+                ) +
               "\nDESCRIPTION:Referee: " + ($fx.fixture.referee // "TBD") +
               "\nLOCATION:" + ($fx.fixture.venue.name // "Unknown") +
               "\nEND:VEVENT"
