--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -94,9 +94,9 @@ jobs:
             .response[]
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
             | . as $fx
-            | ($fx.fixture.date | sub("\\+00:00$";"Z")) as $dtstart
-            | ($dtstart | gsub("[-:]";"") | .[0:15]) as $dtstart_fmt
-            | ($dtstart | fromdate + 7200 | strftime("%Y%m%dT%H%M%SZ")) as $dtend_fmt
+            | ($fx.fixture.date | fromdate) as $start_ts
+            | ($start_ts | strftime("%Y%m%dT%H%M%SZ")) as $dtstart_fmt
+            | ($start_ts + 7200 | strftime("%Y%m%dT%H%M%SZ")) as $dtend_fmt
             | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football"
               + "\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ"))
               + "\nDTSTART:" + $dtstart_fmt
