--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -1,95 +1,39 @@
-name: Update Rankings
+name: Update Fixtures
 
 on:
   schedule:
-    - cron: '0 0 * * *' # every day at midnight
+    - cron: "0 */6 * * *" # every 6 hours
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
-  detect-and-rank:
+  update:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Detect League and Season
+      - name: Set up jq
+        run: sudo apt-get install -y jq
+
+      - name: Fetch Fixtures
+        env:
+          API_KEY: ${{ secrets.API_FOOTBALL_KEY }}
         run: |
           TEAM_ID=$(cat ./assets/teamid.txt)
+          curl -s "https://v3.football.api-sports.io/fixtures?season=2025&team=$TEAM_ID" \
+            -H "x-apisports-key: $API_KEY" \
+            -o tmp/fixtures.json
 
-          MONTH=$(date +%m)
-          YEAR=$(date +%Y)
-          if [ "$MONTH" -lt 8 ]; then
-            SEASON=$((YEAR - 1))
-          else
-            SEASON=$YEAR
-          fi
-          echo "📅 Using season: $SEASON"
-
-          mkdir -p tmp
-
-          response=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&team=${TEAM_ID}" \
-            --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
-
-          echo "$response" | jq . > tmp/team-response.json
-
-          LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
-
-          if [ -z "$LEAGUE_ID" ] || [ "$LEAGUE_ID" = "null" ]; then
-            echo "❌ Could not determine league ID. Exiting."
-            cat tmp/team-response.json
-            exit 1
-          fi
-
-          echo "✅ Detected League ID: $LEAGUE_ID"
-          echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
-          echo "SEASON=$SEASON" >> $GITHUB_ENV
-
-      - name: Fetch Last Season Standings for 3 Leagues
+      - name: Build ICS file
         run: |
-          LAST_SEASON=$((SEASON - 1))
-          ABOVE=$((LEAGUE_ID - 1))
-          BELOW=$((LEAGUE_ID + 1))
-
-          mkdir -p data/previous-season
-
-          for LID in $LEAGUE_ID $ABOVE $BELOW; do
-            echo "Fetching last season standings for league $LID"
-            RESPONSE=$(curl -s --request GET \
-              --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${LAST_SEASON}&league=${LID}" \
-              --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-              --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
-            echo "$RESPONSE" | jq . > "data/previous-season/league-${LID}.json"
-          done
-
-          echo "{\"league_id\": $LEAGUE_ID, \"season\": $SEASON}" > data/league-info.json
-
-      - name: Fetch All Fixtures for Team
-        run: |
-          TEAM_ID=$(cat ./assets/teamid.txt)
-          FIXTURES=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?team=${TEAM_ID}&season=${SEASON}" \
-            --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
-          echo "$FIXTURES" | jq . > tmp/fixtures.json
-
-      - name: Generate ICS for Team
-        run: |
-          ICS_FILE=public/cal/fixtures.ics
-          TEAM_ID=$(cat ./assets/teamid.txt)
-
           mkdir -p public/cal
-
-          # Start calendar
+          ICS_FILE=public/cal/fixtures.ics
           echo "BEGIN:VCALENDAR" > $ICS_FILE
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
 
-          # Append events
+          TEAM_ID=$(cat ./assets/teamid.txt)
+
           jq -r --arg team_id "$TEAM_ID" '
             .response[]
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
@@ -97,29 +41,20 @@ jobs:
             | ($fx.fixture.date | sub("\\+00:00$"; "Z") | fromdate) as $start_ts
             | ($start_ts | strftime("%Y%m%dT%H%M%SZ")) as $dtstart_fmt
             | ($start_ts + 7200 | strftime("%Y%m%dT%H%M%SZ")) as $dtend_fmt
+            | (
+                ($fx.teams.home.name)
+                + (if $fx.fixture.status.short=="FT"
+                   then " " + ($fx.goals.home|tostring) + " v " + ($fx.goals.away|tostring) + " "
+                   else " v "
+                   end)
+                + ($fx.teams.away.name)
+                + (if $fx.league.type == "Cup" then " (\($fx.league.name))" else "" end)
+              ) as $summary
             | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football"
               + "\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ"))
               + "\nDTSTART:" + $dtstart_fmt
               + "\nDTEND:" + $dtend_fmt
-              + "\nSUMMARY:" +
-                  ( if $fx.teams.home.id == ($team_id|tonumber)
-                    then "\($fx.teams.home.name)"
-                      + (if $fx.fixture.status.short=="FT"
-                          then " \($fx.goals.home) v \($fx.goals.away) "
-                          else " v "
-                        end)
-                      + "\($fx.teams.away.name)"
-                    else "\($fx.teams.away.name)"
-                      + (if $fx.fixture.status.short=="FT"
-                          then " \($fx.goals.away) v \($fx.goals.home) "
-                          else " v "
-                        end)
-                      + "\($fx.teams.home.name)"
-                    end )
-                  + (if $fx.league.type != "League"
-                      then " (\($fx.league.name))"
-                      else ""
-                    end)
+              + "\nSUMMARY:" + $summary
               + "\nDESCRIPTION:" + ("Referee: " + ($fx.fixture.referee // "TBD"))
               + "\nLOCATION:" + ($fx.fixture.venue.name // "Unknown")
               + "\nEND:VEVENT"
@@ -127,14 +62,10 @@ jobs:
 
           echo "END:VCALENDAR" >> $ICS_FILE
 
-      - name: Commit and Push
+      - name: Commit and push
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git add data/league-info.json data/previous-season/ public/cal/fixtures.ics
-          if git diff --cached --quiet; then
-            echo "🟢 No changes to commit."
-          else
-            git commit -m "Update league info, standings, and team fixtures"
-            git push
-          fi
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add public/cal/fixtures.ics
+          git commit -m "Update fixtures.ics" || echo "No changes to commit"
+          git push
