--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -49,6 +49,42 @@ jobs:
 
           echo "$CURRENT" | jq . > tmp/current-standings.json
 
+      - name: Build Previous Season Map
+        run: |
+          echo "📑 Building previous season map from cache..."
+          mkdir -p tmp
+
+          TMP_MERGE="tmp/merge_parts.jsonl"
+          > "$TMP_MERGE"  # start fresh
+
+          for id in $LEAGUE_ID $ABOVE $BELOW; do
+            FILE="data/previous-season/league-${id}.json"
+            if [[ -f "$FILE" ]]; then
+              echo "✅ Found: $FILE"
+              jq '
+                  .response[0].league as $league |
+                  $league.standings[]? |
+                  .[]? |
+                  {
+                    "\(.team.id)": {
+                      lastLeague: $league.name,
+                      lastRank: .rank
+                    }
+                  }
+                ' "$FILE" >> "$TMP_MERGE"
+            else
+              echo "⚠️ Missing: $FILE"
+            fi
+          done
+
+          if [[ -s "$TMP_MERGE" ]]; then
+            jq -s 'reduce .[] as $item ({}; . * $item)' "$TMP_MERGE" > tmp/last-season-map.json
+            echo "✅ Last season map written to tmp/last-season-map.json"
+          else
+            echo "❌ No valid previous season data found. Exiting."
+            exit 1
+          fi
+
       - name: Fetch Upcoming Fixtures
         run: |
           echo "📅 Fetching upcoming fixtures..."
@@ -85,8 +121,8 @@ jobs:
           TEAM_ID=$(cat ./assets/teamid.txt)
 
           jq --argjson teamId "$TEAM_ID" \
-             --slurpfile last tmp/last-season-map.json \
-             --slurpfile fixtures tmp/next-fixtures-map.json '
+              --slurpfile last tmp/last-season-map.json \
+              --slurpfile fixtures tmp/next-fixtures-map.json '
             .response[0].league.standings[0] |= map(
               . + {
                 highlight: (if .team.id == $teamId then true else false end),
