--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -3,8 +3,8 @@ name: Update Standings
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0,30 11-21 * * *'
-    - cron: '0 22 * * *'
+    - cron: '0,30 11-21 * * *' # Every 30 minutes from 11:00 to 21:00
+    - cron: '0 22 * * *'       # Also at 22:00
 
 permissions:
   contents: write
@@ -42,10 +42,10 @@ jobs:
       - name: Fetch Current Standings
         run: |
           echo "📥 Fetching current season standings..."
+          # --- UPDATED API CALL ---
           CURRENT=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&league=${LEAGUE_ID}" \
-            --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
+            --url "https://v3.api-football.com/standings?season=${SEASON}&league=${LEAGUE_ID}" \
+            --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}")
 
           echo "$CURRENT" | jq . > tmp/current-standings.json
 
@@ -91,14 +91,15 @@ jobs:
           START_DATE=$(date -d "+0 days" +%Y-%m-%d)
           END_DATE=$(date -d "+14 days" +%Y-%m-%d)
 
+          # --- UPDATED API CALL ---
           FIXTURES=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}&from=${START_DATE}&to=${END_DATE}" \
-            --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
+            --url "https://v3.api-football.com/fixtures?league=${LEAGUE_ID}&season=${SEASON}&from=${START_DATE}&to=${END_DATE}" \
+            --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}")
 
           echo "$FIXTURES" | jq . > tmp/fixtures.json
 
           jq -n --slurpfile f tmp/fixtures.json '
+            # Build a map of team ID to their next fixture opponent
             if ($f[0].response | length) == 0 then
               {"TBD": {nextUp: "TBD"}}
             else
@@ -107,8 +108,10 @@ jobs:
               | reduce .[] as $fx ({};
                   . +
                   {
+                    # Add home team fixture if not already processed
                     ($fx.teams.home.id|tostring):
                       (if has($fx.teams.home.id|tostring) then .[$fx.teams.home.id|tostring] else {nextUp: "\($fx.teams.away.name) (H)"} end),
+                    # Add away team fixture if not already processed
                     ($fx.teams.away.id|tostring):
                       (if has($fx.teams.away.id|tostring) then .[$fx.teams.away.id|tostring] else {nextUp: "\($fx.teams.home.name) (A)"} end)
                   }
@@ -120,6 +123,7 @@ jobs:
         run: |
           TEAM_ID=$(cat ./assets/teamid.txt)
 
+          # Inject previous season data and next fixture opponent into the current standings
           jq --argjson teamId "$TEAM_ID" \
               --slurpfile last tmp/last-season-map.json \
               --slurpfile fixtures tmp/next-fixtures-map.json '
@@ -149,6 +153,7 @@ jobs:
 
       - name: Download league icon
         run: |
+          # This URL is usually stable as it points to the media server
           curl -s -o league-icon.png "https://media.api-sports.io/football/leagues/${LEAGUE_ID}.png"
 
       - name: Commit and Push
