--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -44,10 +44,12 @@ jobs:
           
           # 1. Fetch the HTML content
           echo "Fetching HTML standings from $LEAGUE_URL"
-          curl -s "$LEAGUE_URL" -o tmp/bbc-standings.html
+          # Adding a User-Agent to prevent basic request blocking
+          curl -s -A "Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)" "$LEAGUE_URL" -o tmp/bbc-standings.html
           
           # 2. Python script to find the specific table and parse it into JSON
-          python3 - <<EOF
+          # Note: The EOF must be on a line by itself, with NO indentation.
+          python3 - <<'EOF'
 import json
 from bs4 import BeautifulSoup
 import sys
@@ -68,13 +70,15 @@ soup = BeautifulSoup(html_content, 'html.parser')
 
 # --- CRITICAL: Find the main standings table ---
 # BBC tables often have classes containing 'table' and a generated ssrcss unique identifier.
-standings_table = soup.find('table', class_=lambda c: c and ('table' in c.lower() and 'ssrcss' in c))
+# We are searching for any table that looks like a BBC standings table.
+standings_table = soup.find('table', class_=lambda c: c and 'table' in c.lower() and 'ssrcss' in c)
 
 if not standings_table:
     print("Error: Could not find the main standings table (check BBC class names).")
     # Log the fetched content for manual inspection if scraping fails
     with open('tmp/debug_html_start.txt', 'w') as dbg:
-        dbg.write("HTML CONTENT START\\n" + html_content[:4000]) 
+        dbg.write("HTML CONTENT START\\n")
+        dbg.write(html_content[:4000]) 
     print("A debug file 'tmp/debug_html_start.txt' was created to inspect the fetched content. Check your logs.")
     sys.exit(1)
 
@@ -97,10 +101,11 @@ for row in tbody.find_all('tr'):
         # Extract Rank from the first cell (cols[0])
         rank_text = cols[0].get_text(strip=True)
         # Extract Team Name from the second cell (cols[1]) - handles nested spans
-        team_name_element = cols[1].find('span', class_='ssrcss-1c9v1s-Name')
+        team_name_element = cols[1].find('span', class_='ssrcss-1c9v1s-Name') # Generic BBC team name class guess
         team_name = team_name_element.get_text(strip=True) if team_name_element else cols[1].get_text(strip=True)
         
         # --- Map data structure ---
+        # Data is pulled by column index from the table row
         team_data = {
             "rank": int(rank_text),
             "team_name": team_name,
@@ -117,7 +122,6 @@ for row in tbody.find_all('tr'):
         
     except Exception as e:
         print(f"Skipping row due to parsing error: {e}")
-        # Note: If this happens often, the column indexing is wrong.
         continue
 
 # Create final JSON output structure
@@ -140,7 +144,7 @@ EOF
           # Fetch fixtures page HTML for future processing (e.g., ICS file creation)
           mkdir -p public/cal
           echo "Fetching fixtures from $FIXTURES_URL"
-          curl -s "$FIXTURES_URL" -o public/cal/fixtures.html
+          curl -s -A "Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)" "$FIXTURES_URL" -o public/cal/fixtures.html
           echo "Future ICS calendar source saved as public/cal/fixtures.html"
 
       - name: Generate League Info File
